--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
-						<span class="subheading">Bonjour! Je m'appelle</span>
+						<span class="subheading">Bonjour! Je suis</span>
 						<h1>Zahra Dubeau</h1>
 						<h2>Je suis une
 							<span class="txt-rotate" data-period="2000" data-rotate='[ "Développeuse DATA."]'></span>
@@ -112,13 +112,21 @@
 										38000, Grenoble</span>
 								</li> -->
 								<li class="d-flex"><span style="width: 185px;">Email:</span>
-									<span style="color: darkslategrey;">zdubeau@dubeaul.com</span>
+									<span style="color: darkslategrey;"><a href="mailto:zdubeau@dubeaul.com">Send email</a></span>
 								</li>
 								<li class="d-flex"><span style="width: 185px;">LinkedIn:</span>
-									<span style="color: darkslategrey;font-size: 15px;">linkedin.com/zahra-dubeau-4b9437186</span>
+									<span style="color: darkslategrey;font-size: 15px;">
+										<a href="https://www.linkedin.com/in/zahra-dubeau-4b9437186/" target="_blank">
+											linkedIn/zahra-dubeau
+										</a>
+									</span>
 								</li>
 								<li class="d-flex"><span style="width: 185px;">Gitlab:</span>
-									<span style="color: darkslategrey;">Gitlab.com/ZDubeau</span>
+									<span style="color: darkslategrey;">
+										<a href="https://gitlab.com/ZDubeau" target="_blank">
+										gitlab.com/ZDubeau
+									</a>
+								</span>
 								</li>
 		
 							</ul>
@@ -146,7 +154,7 @@
 						<ul>
 							<li><a href="#page-1">Experience</a></li>
 							<li><a href="#page-2">Formation</a></li>
-							<li><a href="#page-3">A l'aise</a></li>
+							<li><a href="#page-3">A l'aise avec</a></li>
 							<li><a href="#page-4">Personalité</a></li>
 						</ul>
 					</nav>
@@ -263,7 +271,7 @@
 						</div>
 					</div>
 					<div id="page-3" class="page three">
-						<h2 class="heading">A l'aise</h2>
+						<h2 class="heading">A l'aise avec</h2>
 						<div class="row">
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
@@ -499,7 +507,7 @@
 								<h3 class="mb-4">LinkedIn</h3>
 								<p>
 									<a href="linkedin.com/in/zahra-dubeau-4b9437186"
-										style="color: #2e83a5;">linkedin.com/in/zahra-dubeau-4b9437186
+										style="color: #2e83a5;">zahra-dubeau
 									</a>
 								</p>
 							</div>
@@ -514,7 +522,7 @@
 								<h3 class="mb-4">Gitlab</h3>
 								<p>
 									<a href="https://gitlab.com/ZDubeau"
-										style="color: #2e83a5;">https://gitlab.com/ZDubeau
+										style="color: #2e83a5;">ZDubeau
 									</a>
 								</p>
 							</div>
