Change mail display

--- a/index.html
+++ b/index.html
@@ -104,20 +104,23 @@
 								<li class="d-flex"><span style="width: 185px;">Nom:</span> <span
 										style="color: darkslategrey;">Zahra Dubeau</span>
 								</li>
-								<li class="d-flex"><span style="width: 185px;">Date de naissance:</span><span
-										style="color: darkslategrey;">05 October
-										1986</span></li>
+								<li class="d-flex"><span style="width: 185px;">Date de naissance:</span>
+									<span
+										style="color: darkslategrey;">
+										05 October 1986
+									</span>
+								</li>
 								<!-- <li class="d-flex"><span style="width: 185px;">Adresse:</span> <span
 										style="color: darkslategrey;">6, Grande Rue,
 										38000, Grenoble</span>
 								</li> -->
 								<li class="d-flex"><span style="width: 185px;">Email:</span>
-									<span style="color: darkslategrey;"><a href="mailto:zdubeau@dubeaul.com">Send email</a></span>
+									<span style="color: darkslategrey;"><a href="mailto:zdubeau@dubeaul.com">zdubeau@dubeaul.com</a></span>
 								</li>
 								<li class="d-flex"><span style="width: 185px;">LinkedIn:</span>
 									<span style="color: darkslategrey;font-size: 15px;">
 										<a href="https://www.linkedin.com/in/zahra-dubeau-4b9437186/" target="_blank">
-											linkedIn/zahra-dubeau
+											linkedIn.com/zahra-dubeau
 										</a>
 									</span>
 								</li>
