--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
-					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Acceuil</span></a></li>
+					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>A propos</span></a></li>
 					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Résumé</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li>
@@ -494,7 +494,7 @@
 							<div>
 								<h3 class="mb-4">Adresse mail</h3>
 								<p>
-									<a href="mailto:zahra.dubeau.simplon@gmail.com"
+									<a href="mailto:zdubeau@dubeaul.com"
 										style="color: #2e83a5;">zdubeau@dubeaul.com
 									</a>
 								</p>
@@ -509,7 +509,7 @@
 							<div>
 								<h3 class="mb-4">LinkedIn</h3>
 								<p>
-									<a href="linkedin.com/in/zahra-dubeau-4b9437186"
+									<a href="https://www.linkedin.com/in/zahra-dubeau-4b9437186/" target="_blank"
 										style="color: #2e83a5;">zahra-dubeau
 									</a>
 								</p>
@@ -524,7 +524,7 @@
 							<div>
 								<h3 class="mb-4">Gitlab</h3>
 								<p>
-									<a href="https://gitlab.com/ZDubeau"
+									<a href="https://gitlab.com/ZDubeau" target="_blank"
 										style="color: #2e83a5;">ZDubeau
 									</a>
 								</p>
