Modify linkedIn link

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 								</li>
 								<li class="d-flex"><span style="width: 185px;">LinkedIn:</span>
 									<span style="color: darkslategrey;font-size: 15px;">
-										<a href="https://www.linkedin.com/in/zahra-dubeau-4b9437186/" target="_blank">
-											linkedIn.com/zahra-dubeau
+										<a href="https://www.linkedin.com/in/ZahraDubeau/" target="_blank">
+											linkedIn.com/ZahraDubeau
 										</a>
 									</span>
 								</li>
@@ -509,8 +509,8 @@
 							<div>
 								<h3 class="mb-4">LinkedIn</h3>
 								<p>
-									<a href="https://www.linkedin.com/in/zahra-dubeau-4b9437186/" target="_blank"
-										style="color: #2e83a5;">zahra-dubeau
+									<a href="https://www.linkedin.com/in/ZahraDubeau/" target="_blank"
+										style="color: #2e83a5;">ZahraDubeau
 									</a>
 								</p>
 							</div>
